docs: 更新 .gitignore 并添加备份管理说明
- 修改 .gitignore：排除动态内容但跟踪 .md 配置文件
- 在 AGENTS.md 中添加备份文件位置说明
- 备份统一存放在 ~/.openclaw/backups/
- 定义备份命名规范

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-agents/*/workspace/
+# Agent workspace 动态内容（不跟踪）
+agents/*/workspace/memory/
+agents/*/workspace/.openclaw/
+agents/*/workspace/*.jsonl
+agents/*/workspace/sessions/
+
+# 但跟踪配置文件（使用 ! 取消忽略）
+!agents/*/workspace/*.md
